feat: M0.2 业务领域模型设计